# django-backoffice-extensions

./: .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  HISTORY.rst  Makefile  README.rst  db.sqlite3  mydatabase  pyproject.toml
backoffice_extensions/: __init__.py  apps.py  helpers.py  mixins.py  settings.py  views.py
backoffice_extensions/forms/: widgets.py
backoffice_extensions/locale/en/LC_MESSAGES/: django.po
backoffice_extensions/locale/es/LC_MESSAGES/: django.po
backoffice_extensions/static/js/: jquery.formset.js  tailwind.js
backoffice_extensions/templates/backoffice/: base.html  headers.html  index.html  sidebar.html
backoffice_extensions/templates/backoffice/bases/: detail.html  form.html  list.html
backoffice_extensions/templates/backoffice/layouts/: default.html
backoffice_extensions/templates/backoffice/partials/: delete_confirmation.html  filters.html  menu.html  pagination.html  search.html  statistics_values.html
backoffice_extensions/templates/backoffice/widgets/: select_multiple.html
backoffice_extensions/templatetags/: backoffice.py
custom_backoffice/: __init__.py  apps.py  mixins.py  views.py
custom_backoffice/templates/backoffice/: index.html
custom_backoffice/templates/backoffice/partials/: filters.html  menu.html  pagination.html  search.html
custom_backoffice/templatetags/: backoffice.py
tests/: factories.py  settings.py  test_backoffice.py  urls.py  wsgi.py
tests/app/: constants.py  models.py
tests/app/migrations/: 0001_initial.py  0002_alter_stuff_id.py
tests/backoffice/: apps.py  urls.py  views.py
tests/backoffice/auth/: forms.py  urls.py  views.py
tests/backoffice/stuffs/: urls.py  views.py
tests/backoffice/templates/backoffice/auth/: sign_in.html
tests/backoffice/templates/backoffice/stuff/: detail.html  list.html
tests/backoffice/templates/backoffice/users/: create.html  detail.html  edit.html  list.html
tests/backoffice/users/: filters.py  forms.py  urls.py  views.py
