[tool.poetry]
name = "django-backoffice-extensions"
version = "1.0.5"
description = "A set of views, tools and helpers to create a backoffice using Django."
readme = "README.rst"
authors = ["Marcos Gabarda <marcos@dekalabs.com>"]
license = "MIT"
homepage = "https://github.com/Dekalabs/django-backoffice-extensions"
packages = [
    { include = "backoffice_extensions" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
django-model-utils = "^4.0.0"
pytest-cov = "^2.10.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^5.4.3"
black = "^19.10b0"
factory_boy = "^2.12.0"
django-test-plus = "^1.4.0"
pytest-django = "^3.9.0"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
